@@ -4,7 +4,9 @@
 Version 0.2.2 [2005-xxx-xxx] - Jesper Veggerby <pear.nosey@veggerby.dk>
     * Added 'border' and 'cssclass' option to Image_Canvas_GD::toHtml()
     * Added image support when using SVG (using embedded base64 encoding)
+    * Added link ("imagemap") support with SVG
     * Fixed bug where 'htmltags' were not transferred to image mapping of polygon vertices
+    * Fixed bug in SVG where pie slices with some specific angles curled the wrong way
 
 Version 0.2.1 [2005-Aug-08] - Jesper Veggerby <pear.nosey@veggerby.dk>
     * Added Request #4997 "HTML attributes and JS actions in imagemaps" - using 'htmltags' entry
